--- a/sb-salesmanagement/bin/main/static/css/sb-salesmanagement.css
+++ b/sb-salesmanagement/bin/main/static/css/sb-salesmanagement.css
@@ -1,46 +1,75 @@
 @charset "UTF-8";
 
+a {
+  text-decoration: none;
+}
+
 table {
-	width: 80%;
-	border-collapse: collapse;
-	font-size: 12px;
+  width: 80%;
+  border-collapse: collapse;
+  font-size: 12px;
 }
 
 table th, table td {
-	border: 1px solid #ddd;
-	padding: 6px;
+  border: 1px solid #ddd;
+  padding: 6px;
 }
 
 table th {
-	background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 .table-order-list {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	table-layout: fixed;
-	width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  table-layout: fixed;
+  width: 100%;
 }
 
 .table-form {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	table-layout: fixed;
-	width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  table-layout: fixed;
+  width: 100%;
 }
 
 .form-title {
-	width: 20%;
+  width: 20%;
 }
 
 .form-required {
-	width: 5%;
+  width: 5%;
 }
 
 .back {
-	margin-left: 20px;
+  margin-left: 20px;
 }
 
 .error-message {
-	color: #f00;
+  color: #f00;
+}
+
+.pagenation-div ul {
+  font-size: 0px;
+}
+
+.pagenation-div li {
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  display: inline-block;
+  font-size: 20px;
+  margin-right: 3px;
+  text-align: center;
+  width: 40px;
+}
+
+.pagenation-div a {
+  display: block;
+  font-weight: bold;
+  margin: 0;
+}
+
+.pagenation-div a:hover {
+  background-color: #444;
+  color: #ddd;
 }
