--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/user_list.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/user_list.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>製造部門売上管理システム：ユーザー一覧</title>
+<link rel="stylesheet" href="/css/sb-salesmanagement.css">
 </head>
 <body>
 
